src/05-components/_box.scss
/** @format */
/// Comment
///
/// @group Components
.x-box {
	// width: 100%;
	border-radius: 1.6rem;
	border: 2px solid transparent;
	overflow: visible;
	--gy: 1rem;
	&:disabled,
	&[disabled] {
		pointer-events: none;
		opacity: 0.3;
	}
	&:not(.m__btn):not(.m__button) {
		padding: 1rem;
	}
	&:not([class*="x-flx"]) {
		@include flexbox(column, nowrap, flex-start, stretch);
		> :not([class*="__mB"]):not(:last-child) {
			/// Bottom
			margin-bottom: var(--gy);
			&.x-flx[class*="-wrap"],
			&.x-flx[class*="-reverse"],
			&[class*="__gapi"]:not([class*="ngX"]):not([class*="ngY"]) {
				margin-bottom: calc(-1 * (var(--g, 1rem) - var(--gy, 1rem)));
			}
		}
	}

	/// Comment theme
	///
	/// @group Modifiers
	&.m__tm-light {
		background: color(light, 0.1);
		&:hover {
			border-color: color(light, 0.1);
		}
		&:hover,
		&.is__active,
		&.is__routeExact {
			&.m__btn,
			&.m__button {
				background: color(light, 0.2);
				// border-color: color(light, 0.3);
				.x-box {
					box-shadow: 3px 3px 9px color(light, 0.3);
				}
			}
		}
		&.m__btn,
		&.m__button {
			&:not([class*="__txtC"]) {
				/// Color
				color: color(light);
			}
		}
	}
	&.m__tm-lightAlt {
		background: color(light);
		&:hover {
			border-color: color(dark, 0.1);
		}
		&:hover,
		&.is__active,
		&.is__routeExact {
			&.m__btn,
			&.m__button {
				background: color(light, 0.2);
				// border-color: color(light, 0.3);
				.x-box {
					box-shadow: 3px 3px 9px color(light, 0.3);
				}
			}
		}
		&.m__btn,
		&.m__button {
			&:not([class*="__txtC"]) {
				/// Color
				color: color(light);
			}
		}
	}
	/// default theme
	&:not([class*="__tm"]),
	&.m__tm-secondary {
		background: color(secondary, 0.1);
		&:hover {
			border-color: color(secondary, 0.1);
		}
		&:hover,
		&.is__active,
		&.is__routeExact {
			&.m__btn,
			&.m__button {
				background: color(secondary, 0.2);
				// border-color: color(secondary, 0.3);
				.x-box {
					box-shadow: 3px 3px 9px color(secondary, 0.3);
				}
			}
		}
		&.m__btn,
		&.m__button {
			&:not([class*="__txtC"]) {
				/// Color
				color: color(secondary);
			}
		}
	}

	/// button behavior
	///
	/// @group Modifiers
	&.m__btn,
	&.m__button {
		padding: 0.8rem;
		.x-box {
			border-color: transparent !important;
		}
		p {
			text-align: center;
		}
	}

	.x-box {
		border-radius: 1rem;

		/// Square shape
		/// this assummes there is only one child
		///
		/// @group Modifiers
		&.m__square {
			&-xs {
				width: 3rem;
			}
			&-sm {
				width: 5rem;
			}
			&-lg {
				width: 9rem;
			}
			&,
			&-md {
				width: 6rem;
			}
		}
		&[class*="__square"] {
			margin: 0 auto;
			&:before {
				content: "";
				display: block;
				width: 100%;
				height: 0;
				padding-bottom: 100%;
			}
			> * {
				position: absolute;
				top: 50%;
				left: 50%;
				transform: translate(-50%, -50%);
			}
		}
	}
}

